--- a/mbtisns/src/main/resources/application.properties
+++ b/mbtisns/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=mbtisns
+spring.datasource.url=jdbc:postgresql://localhost:5433/mbtimeeting
+spring.datasource.username=postgres
+spring.datasource.password=dpsqleldkrktdlek180
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.datasource.hikari.maximum-pool-size=10
+
