--- a/mbtisns/src/main/resources/application.properties
+++ b/mbtisns/src/main/resources/application.properties
@@ -1,10 +1,19 @@
 spring.application.name=mbtisns
-spring.datasource.url=jdbc:postgresql://localhost:5433/mbtimeeting
-spring.datasource.username=postgres
-spring.datasource.password=dpsqleldkrktdlek180
+#spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.hikari.maximum-pool-size=10
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicTypeDescriptor=TRACE
+logging.level.org.hibernate.type=TRACE
 
